# CellularPottsModel

./: README.md  XGetopt(1).h  XGetopt.cpp  boundary.cpp  boundary.h  cell.h  collisions.cpp  collisions.h  cpm.cu  cpm.h  deformations.cpp  deformations.h  edge_detection.cpp  edge_detection.h  initial.cpp  initial.h  kernel.cu  macros.h  main.cu  perlin.cpp  perlin.h  project.vcxproj  rnd_generators.cpp  rnd_generators.h  settings.h  shape_rendering(1).h  shape_rendering.cpp
data/: large_cells_25.ics  middle_cells_30.ics  small_cells_5.ics  small_cells_8.ics
ini/: CMakeLists.txt  iniparser.cc  iniparser.h  iniparser.l  iniparser.y
